--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -171,7 +171,6 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TkaFile.h" />
-    <ClInclude Include="tkEngine.h" />
     <ClInclude Include="TLASBuffer.h" />
     <ClInclude Include="TResourceBank.h" />
     <ClInclude Include="Vector.h" />
@@ -194,7 +193,7 @@
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="MeshParts.cpp" />
     <ClCompile Include="Model.cpp" />
-    <ClCompile Include="NullTexture.cpp" />
+    <ClCompile Include="NullTextureMaps.cpp" />
     <ClCompile Include="PipelineState.cpp" />
     <ClCompile Include="RaytracingDescriptorHeaps.cpp" />
     <ClCompile Include="RayTracingPSO.cpp" />
@@ -209,7 +208,6 @@
     <ClCompile Include="StructuredBuffer.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TkaFile.cpp" />
-    <ClCompile Include="tkEngine.cpp" />
     <ClCompile Include="TLASBuffer.cpp" />
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
