--- a/DirectX12Engine.vcxproj.filters
+++ b/DirectX12Engine.vcxproj.filters
@@ -40,43 +40,43 @@
     <Filter Include="Graphics\Pipeline">
       <UniqueIdentifier>{70911658-01fd-4231-8649-527a7f9ebac4}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Graphics\Resourceibinding">
+    <Filter Include="Graphics\Resourcebinding">
       <UniqueIdentifier>{c7613159-5a57-4928-b5d0-3b4461984e06}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VertexBuffer.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="IndexBuffer.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="GPUBuffer.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="StructuredBuffer.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="RWStructuredBuffer.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="IShaderResource.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="IUnorderAccessResrouce.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="DescriptorHeap.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="PipelineState.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="Shader.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="ConstantBuffer.h">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClInclude>
     <ClInclude Include="RaytracingWorld.h">
       <Filter>raytracing</Filter>
@@ -195,34 +195,34 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="VertexBuffer.cpp">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClCompile>
     <ClCompile Include="IndexBuffer.cpp">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClCompile>
     <ClCompile Include="GPUBuffer.cpp">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClCompile>
     <ClCompile Include="StructuredBuffer.cpp">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClCompile>
     <ClCompile Include="RWStructuredBuffer.cpp">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClCompile>
     <ClCompile Include="DescriptorHeap.cpp">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClCompile>
     <ClCompile Include="RootSignature.cpp">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClCompile>
     <ClCompile Include="PipelineState.cpp">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClCompile>
     <ClCompile Include="ConstantBuffer.cpp">
-      <Filter>Graphics\Resourceibinding</Filter>
+      <Filter>Graphics\Resourcebinding</Filter>
     </ClCompile>
     <ClCompile Include="RaytracingWorld.cpp">
       <Filter>raytracing</Filter>
