--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -138,6 +138,8 @@
     <ClInclude Include="DescriptorHeap.h" />
     <ClInclude Include="DirectX12Engine.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="Font.h" />
+    <ClInclude Include="FontEngine.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GPUBuffer.h" />
     <ClInclude Include="GraphicsEngine.h" />
@@ -189,6 +191,8 @@
     <ClCompile Include="DescriptorHeap.cpp" />
     <ClCompile Include="DirectX12Engine.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="Font.cpp" />
+    <ClCompile Include="FontEngine.cpp" />
     <ClCompile Include="GPUBuffer.cpp" />
     <ClCompile Include="GraphicsEngine.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
