--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="RWStructuredBuffer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Skeleton.h" />
+    <ClInclude Include="Sprite.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="StructuredBuffer.h" />
     <ClInclude Include="targetver.h" />
@@ -214,6 +215,7 @@
     <ClCompile Include="RWStructuredBuffer.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Skeleton.cpp" />
+    <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="StructuredBuffer.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TkaFile.cpp" />
