--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TkaFile.h" />
     <ClInclude Include="TkmFIle.h" />
+    <ClInclude Include="TksFile.h" />
     <ClInclude Include="TLASBuffer.h" />
     <ClInclude Include="TResourceBank.h" />
     <ClInclude Include="Vector.h" />
@@ -220,6 +221,7 @@
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TkaFile.cpp" />
     <ClCompile Include="TkmFile.cpp" />
+    <ClCompile Include="TksFile.cpp" />
     <ClCompile Include="TLASBuffer.cpp" />
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
