--- a/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
+++ b/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="VulkanGPUBuffer.h" />
     <ClInclude Include="VulkanGraphicsEngine.h" />
     <ClInclude Include="VulkanIndexBuffer.h" />
+    <ClInclude Include="VulkanTexture.h" />
     <ClInclude Include="VulkanVertexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
@@ -166,6 +167,7 @@
     <ClCompile Include="VulkanGPUBuffer.cpp" />
     <ClCompile Include="VulkanGraphicsEngine.cpp" />
     <ClCompile Include="VulkanIndexBuffer.cpp" />
+    <ClCompile Include="VulkanTexture.cpp" />
     <ClCompile Include="VulkanVertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
