--- a/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
+++ b/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Raytracing.h" />
     <ClInclude Include="RenderingContext.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="StorageBuffer.h" />
     <ClInclude Include="targetver.h" />
