--- a/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
+++ b/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="VulkanIndexBuffer.h" />
     <ClInclude Include="VulkanRaytracingEngine.h" />
     <ClInclude Include="VulkanTexture.h" />
+    <ClInclude Include="VulkanTLASBuffer.h" />
     <ClInclude Include="VulkanVertexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
@@ -173,6 +174,7 @@
     <ClCompile Include="VulkanIndexBuffer.cpp" />
     <ClCompile Include="VulkanRaytracingEngine.cpp" />
     <ClCompile Include="VulkanTexture.cpp" />
+    <ClCompile Include="VulkanTLASBuffer.cpp" />
     <ClCompile Include="VulkanVertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
