インクルード問題に起因するエラーを少しつぶした(Matrix,Vector)

--- a/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
+++ b/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="UniformBuffer.h" />
     <ClInclude Include="VkRaytracingInstance.h" />
     <ClInclude Include="VulkanBLASBuffer.h" />
+    <ClInclude Include="VulkanCamera.h" />
     <ClInclude Include="VulkanGPUBuffer.h" />
     <ClInclude Include="VulkanGraphicsEngine.h" />
     <ClInclude Include="VulkanIndexBuffer.h" />
@@ -176,6 +177,7 @@
     <ClCompile Include="UniformBuffer.cpp" />
     <ClCompile Include="VkVertexBuffer.cpp" />
     <ClCompile Include="VulkanBLASBuffer.cpp" />
+    <ClCompile Include="VulkanCamera.cpp" />
     <ClCompile Include="VulkanGPUBuffer.cpp" />
     <ClCompile Include="VulkanGraphicsEngine.cpp" />
     <ClCompile Include="VulkanIndexBuffer.cpp" />
