--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="TLASBuffer.h" />
     <ClInclude Include="TResourceBank.h" />
     <ClInclude Include="Vector.h" />
+    <ClInclude Include="Vertex.h" />
     <ClInclude Include="VertexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
