エンジンクラス、初期化に必要な要素のたたき台実装。

--- a/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
+++ b/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DirectX11GraphicEngine.h" />
     <ClInclude Include="DirectX11VertexBuffer.h" />
     <ClInclude Include="IShaderResource.h" />
     <ClInclude Include="stdafx.h" />
@@ -139,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DirectX11Buffer.cpp" />
+    <ClCompile Include="DirectX11GraphicEngine.cpp" />
     <ClCompile Include="IShaderResource.cpp" />
     <ClCompile Include="DirectX11GraphicsEngine.cpp" />
     <ClCompile Include="TextureDX11.cpp" />
